test/test-cases/negative/operation-errors.pas
Program array_errors(input, output);

Var x,y,z: integer;
Begin
x:= 0;
y:= 1;
  z := x + ;
  z := x y;
  read(r, y)
End.
